[package]
name = "STMController"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.8.0", features = ["canvas"] }
iced_audio = "0.11.0"
iced_aw = { version = "0.4.1", features = ["number_input", "icons"] }
