[package]
name = "stm_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.9.0"
iced_aw = {version="0.5.0", features=["number_input"]}
iced_core = "0.9.0"
iced_graphics = { version = "0.8.0", features = ["canvas"] }
iced_native = "0.10.1"
iced_style = "0.8.0"
itertools-num = "0.1.3"
num-traits = "0.2.15"
unicode-segmentation = "1.10.1"

